WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310120
Find in Page match index is not being populated
https://bugs.webkit.org/show_bug.cgi?id=310120
Summary
Find in Page match index is not being populated
ccarley2
Reported
2026-03-17 11:15:34 PDT
When clicking through matches in a Find session, the index always says 1. The index needs to be populated.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-17 11:15:41 PDT
<
rdar://problem/172760529
>
ccarley2
Comment 2
2026-03-17 11:30:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60795
EWS
Comment 3
2026-03-18 09:54:21 PDT
Committed
309485@main
(58cdc35fd9f7): <
https://commits.webkit.org/309485@main
> Reviewed commits have been landed. Closing PR #60795 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug