Find in Page match index is not being populated https://bugs.webkit.org/show_bug.cgi?id=310120 rdar://172760529

Reviewed by Megan Gardner.

This was some fallout from this refactor:
https://commits.webkit.org/309268@main

The FindController index was not being populated. I also added
an API test to ensure this does not happen again.

* Source/WebKit/WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::findString):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewFindString.mm:
(TestWebKitAPI::TEST(WKWebViewFindString, MatchIndexIsCorrectWhenNavigatingForwardAndBackward)):

Canonical link: https://commits.webkit.org/309485@main